@@ -25,7 +25,7 @@
  * @test
  * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
  * @modules jdk.incubator.foreign/jdk.internal.foreign
- * @run testng/othervm -Dforeign.restricted=permit TestLibraryLookup
+ * @run testng/othervm --enable-native-access=ALL-UNNAMED TestLibraryLookup
  */
 
 import jdk.incubator.foreign.LibraryLookup;
